--- a/index.htm
+++ b/index.htm
@@ -115,11 +115,24 @@
 			</div>
 			<div class="item">
 				<div class="about-left-grid">
+					<h2><span>Projects</span></h2>
+					<p></p>
+					<ul>
+						<li>Human Silhouette Extraction from Video</li>			
+						<li>Big Data:Hadoop</li>
+						<li>Web Development</li>
+						<li>Programming,Data Structures and Algoriths using Python</li>
+					</ul>
+				</div>
+			</div>
+			<div class="item">
+				<div class="about-left-grid">
 					<h2><span>Achievements</span></h2>
 					<p></p>
 					<ul>
-						<li>Won First prize in CPSM</li>
-						<li>Finalist in College Tech Fest</li>
+						<li>Won First prize in Centre for Pedagogical Studies in Mathematics</li>
+						<li>Finalist in College Tech Fest,2k15</li>
+						<li>Worked as co-ordinator for College Fest</li>
 						<li>Works for an NGO named PANKH</li> 
 					</ul>
 				</div>
