--- a/index.htm
+++ b/index.htm
@@ -119,8 +119,8 @@
 					<p></p>
 					<ul>
 						<li>Human Silhouette Extraction from Video</li>			
-						<li>Big Data:Hadoop</li>
-						<li>Web Development</li>
+						<li>Big Data:Hadoop-ARDENT</li>
+						<li>Web Development-INTERNSHALA</li>
 						<li>Programming,Data Structures and Algoriths using Python</li>
 					</ul>
 				</div>
