--- a/index.htm
+++ b/index.htm
@@ -120,6 +120,7 @@
 					<ul>
 						<li>Human Silhouette Extraction from Video</li>			
 						<li>Big Data:Hadoop-ARDENT</li>
+						<li>Web Development-INTERNSHALA</li>
 						<li>Programming,Data Structures and Algoriths using Python</li>
 					</ul>
 				</div>
