--- a/index.htm
+++ b/index.htm
@@ -202,12 +202,16 @@
 				</div>
 				<div class="col-md-2 skills-grid text-center">
 					<div class="circle" id="circles-4"></div>
+					<p>CSS</p>
+				</div>
+				<div class="col-md-2 skills-grid text-center">
+					<div class="circle" id="circles-4"></div>
 					<p>Java</p>
 				</div>
 				<div class="col-md-2 skills-grid text-center">
 					<div class="circle" id="circles-5"></div>
 					<p>Python</p>
-				
+				</div>
 
 				 <script type="text/javascript" src="js/circles.js"></script>
 
@@ -215,8 +219,8 @@
 					var colors = [
 							['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'],
 						];
-					var percentage=[50,50,50,40];
-					for (var i = 1; i <5; i++)
+					var percentage=[50,50,40,50,40];
+					for (var i = 1; i <6; i++)
 					 {
 						var child = document.getElementById('circles-' + i);
 						Circles.create({
