--- a/index.htm
+++ b/index.htm
@@ -202,7 +202,7 @@
 				</div>
 				<div class="col-md-2 skills-grid text-center">
 					<div class="circle" id="circles-4"></div>
-					<p>CSS</p>
+					<p>SQL</p>
 				</div>
 				<div class="col-md-2 skills-grid text-center">
 					<div class="circle" id="circles-4"></div>
