--- a/index.htm
+++ b/index.htm
@@ -202,7 +202,7 @@
 				</div>
 				<div class="col-md-2 skills-grid text-center">
 					<div class="circle" id="circles-4"></div>
-					<p>SQL</p>
+					<p>CSS</p>
 				</div>
 				<div class="col-md-2 skills-grid text-center">
 					<div class="circle" id="circles-4"></div>
@@ -219,7 +219,7 @@
 					var colors = [
 							['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'], ['#6ed4c0', '#ffffff'],
 						];
-					var percentage=[50,50,50,50,40];
+					var percentage=[50,50,40,50,40];
 					for (var i = 1; i <6; i++)
 					 {
 						var child = document.getElementById('circles-' + i);
